# stock-market-peer-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py  test_news_apis.py
.streamlit/: config.toml
assets/: bull_market
docs/superpowers/plans/: 2026-07-21-wealthlens.md
docs/superpowers/specs/: 2026-07-21-wealthlens-portfolio-analytics-design.md
tests/: __init__.py  test_ai_commentary.py  test_analytics.py  test_portfolio.py  test_report.py  test_tickers.py
views/: __init__.py  portfolio_view.py
wealthlens/: __init__.py  ai_commentary.py  analytics.py  config.py  portfolio.py  report.py  tickers.py
