[project]
name = "stockpeers"
version = "0.2.0"
description = "Stock peer analysis dashboard: easily compare stocks against others in their peer group"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "pandas>=2.2.3",
    "numpy>=1.26",
    "streamlit>=1.44.2",
    "yfinance>=0.2.55",
    "requests>=2.31.0",
    "reportlab>=4.2",
    "openai>=1.40",
    "google-generativeai>=0.8",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
